change default properties.