@@ -9,54 +9,89 @@ import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 /**
- * Kafka Connector Generator and Executor
- * Manages MongoDB Kafka Source and Sink Connectors with multiple operations
+ * Kafka Connector Generator and Executor (Full Production Version)
+ * Manages MongoDB Kafka Source and Sink Connectors with:
+ * 1. Timestamp-based startup
+ * 2. Dynamic Partition/Task tuning per collection
+ * 3. Automatic Topic Creation
+ * 4. Fault Tolerance settings
  */
 public class KafkaConnectorGenerator {
 
-    // Kafka Connect Configuration
+    // ==========================================
+    // 1. GLOBAL CONFIGURATION
+    // ==========================================
     private static final String KAFKA_CONNECT_URL = "http://10.169.24.13:8083/connectors";
     private static final String DATABASE = "atv";
     private static final String TOPIC_PREFIX = "mongo";
 
-    // Source Connector Configuration
-    private static final String SOURCE_CONNECTION_URI = "mongodb://admin:M0ng0DB%40P%40%24%24w0rd%21@10.169.24.26:27017/?replicaSet=rs1&authSource=admin";
-    private static final String SOURCE_SASL_USERNAME = "appuser";
-    private static final String SOURCE_SASL_PASSWORD = "uJK67dC1Ax";
+    // --- TIMESTAMP CONFIGURATION ---
+    // Format: EPOCH SECONDS (not milliseconds!)
+    // The MongoDB Kafka Connector expects seconds for startup.mode.timestamp
+    // Example: date -d "2024-12-01 10:00:00" +%s
+    // Alternative formats: ISO-8601 ('1970-01-01T00:00:30Z') or BSON Timestamp
+    private static final String START_TIMESTAMP = "1766405293";
 
-    // Sink Connector Configuration
-    private static final String SINK_CONNECTION_URI = "mongodb://admin:xstrm%401234@10.169.24.27:27017/?authSource=admin&connectTimeoutMS=10000";
-    private static final String SINK_SASL_USERNAME = "appuser";
-    private static final String SINK_SASL_PASSWORD = "uJK67dC1Ax";
+    // --- SOURCE CREDENTIALS ---
+    private static final String SOURCE_URI = "mongodb://admin:M0ng0DB%40P%40%24%24w0rd%21@10.169.24.26:27017/?replicaSet=rs1&authSource=admin";
+    private static final String SOURCE_USER = "appuser";
+    private static final String SOURCE_PASS = "uJK67dC1Ax";
+
+    // --- SINK CREDENTIALS ---
+    private static final String SINK_URI = "mongodb://admin:xstrm%401234@10.169.24.27:27017/?authSource=admin&connectTimeoutMS=10000";
+    private static final String SINK_USER = "appuser";
+    private static final String SINK_PASS = "uJK67dC1Ax";
+
+    // --- FAULT TOLERANCE ---
     private static final String DLQ_TOPIC = "mongo.dlq.errors";
 
-    /**
-     * Enum for connector operations
-     */
+    // ==========================================
+    // 2. STRATEGY: TUNING RULES
+    // ==========================================
+
+    static class TopicConfig {
+        int sinkTasks; // Number of Sink Connector Tasks (Parallelism)
+
+        public TopicConfig(int sinkTasks) {
+            this.sinkTasks = sinkTasks;
+        }
+    }
+
+    private static final Map<String, TopicConfig> COLLECTION_RULES = new HashMap<>();
+
+    static {
+        // DEFAULT RULE: 1 Sink Task
+        // Good for small to medium collections.
+        COLLECTION_RULES.put("DEFAULT", new TopicConfig(1));
+
+        // HIGH PERFORMANCE RULE: 20 Sink Tasks
+        // Apply this to your "Major Write" collections.
+        // NOTE: Topics must be pre-created with desired partitions/retention
+        TopicConfig highPerfConfig = new TopicConfig(20);
+        COLLECTION_RULES.put("playable_content", highPerfConfig);
+
+        // Add more collection-specific rules here as needed
+        // Example:
+        // COLLECTION_RULES.put("rails", new TopicConfig(5));
+    }
+
+    // ==========================================
+    // 3. MAIN EXECUTION LOGIC
+    // ==========================================
+
     public enum ConnectorOperation {
-        CREATE, // Create new connectors
-        DELETE, // Delete existing connectors
-        RESTART, // Restart existing connectors
-        LIST, // List all connectors
-        DELETE_SOURCE, // Delete only source connectors
-        DELETE_SINK, // Delete only sink connectors
-        RESTART_SOURCE, // Restart only source connectors
-        RESTART_SINK // Restart only sink connectors
+        CREATE, DELETE, RESTART, LIST, DELETE_SOURCE, DELETE_SINK, RESTART_SOURCE, RESTART_SINK
     }
 
-    /**
-     * Enum for connector type
-     */
     public enum ConnectorType {
-        SOURCE,
-        SINK,
-        BOTH
+        SOURCE, SINK, BOTH
     }
 
-    // Statistics
     private static int totalCollections = 0;
     private static int successfulSourceConnectors = 0;
     private static int failedSourceConnectors = 0;
@@ -64,35 +99,61 @@ public class KafkaConnectorGenerator {
     private static int failedSinkConnectors = 0;
 
     public static void main(String[] args) {
-        ConnectorOperation operation = ConnectorOperation.CREATE;
+        ConnectorOperation operation = ConnectorOperation.LIST;
+        List<String> collections;
 
         if (args.length > 0) {
             try {
                 operation = ConnectorOperation.valueOf(args[0].toUpperCase());
             } catch (IllegalArgumentException e) {
-                System.err.println("Invalid operation: " + args[0]);
                 printUsage();
                 return;
             }
         }
 
+        // Make collections configurable via command-line argument
+        // Usage: java KafkaConnectorGenerator CREATE mw_config,playable_content
+        if (args.length > 1) {
+            collections = Arrays.asList(args[1].split(","));
+            System.out.println("Using collections from arguments: " + String.join(", ", collections));
+        } else {
+            // Default collections for testing
+            collections = List.of("mw_config", "playable_content");
+            System.out.println("Using default collections: " + String.join(", ", collections));
+        }
 
-        List<String> collections = List.of("mw_config", "playable_content");
-
-//        List<String> collections = Arrays.asList("ltp_channel_inventory", "sport_info", "promotional_event", "device_notification", "system.profile", "sequence", "dummy_channel_info", "notification_store", "box_details", "failed_wcf_events", "filtered_shows", "pages", "game_meta", "hotstar_highlights", "match_questions", "cpRule", "theme_config", "box_qms", "airtel_only_config", "mw_config", "rails_copy", "title_akas", "user_otp", "cms_user", "bb_upgrade_order", "rails", "playable_intermediate_content", "product_channel_mapping", "polls", "auto_redemption", "live_content", "match_session_info", "titles", "external_content", "testing", "pending_work", "packages", "deviceUpdate", "people", "playable_content", "temp", "ltp_licence_inventory", "cdn_metrics", "comparators", "pc_prod_5_dec", "integration_templates", "cdn_auth_config", "alertss_config", "isoLanguages", "stick_device", "gracenote_meta", "alerts_config", "old_user_detail", "chatTopics", "alerts", "user_old", "youtube_config", "cdn_metrics_history", "playable_content_debezium", "list_config", "org_config", "notification_store_new", "alert_user", "cp_config", "alert_triggers", "aggregation_config", "cms_roles", "user_block_list", "language", "creators", "sequence_generator", "iptv_mw_config", "language_config", "supply_config", "language_channel_mapping", "demoTest", "reconcile", "app_config");
+        // All collections (commented for reference)
+        // List<String> allCollections = Arrays.asList("ltp_channel_inventory",
+        // "sport_info", "promotional_event", "device_notification", "system.profile",
+        // "sequence", "dummy_channel_info", "notification_store", "box_details",
+        // "failed_wcf_events", "filtered_shows", "pages", "game_meta",
+        // "hotstar_highlights", "match_questions", "cpRule", "theme_config", "box_qms",
+        // "airtel_only_config", "mw_config", "rails_copy", "title_akas", "user_otp",
+        // "cms_user", "bb_upgrade_order", "rails", "playable_intermediate_content",
+        // "product_channel_mapping", "polls", "auto_redemption", "live_content",
+        // "match_session_info", "titles", "external_content", "testing",
+        // "pending_work", "packages", "deviceUpdate", "people", "playable_content",
+        // "temp", "ltp_licence_inventory", "cdn_metrics", "comparators",
+        // "pc_prod_5_dec", "integration_templates", "cdn_auth_config",
+        // "alertss_config", "isoLanguages", "stick_device", "gracenote_meta",
+        // "alerts_config", "old_user_detail", "chatTopics", "alerts", "user_old",
+        // "youtube_config", "cdn_metrics_history", "playable_content_debezium",
+        // "list_config", "org_config", "notification_store_new", "alert_user",
+        // "cp_config", "alert_triggers", "aggregation_config", "cms_roles",
+        // "user_block_list", "language", "creators", "sequence_generator",
+        // "iptv_mw_config", "language_config", "supply_config",
+        // "language_channel_mapping", "demoTest", "reconcile", "app_config");
 
         totalCollections = collections.size();
 
         System.out.println("========================================");
         System.out.println("Kafka Connector Manager");
         System.out.println("Operation: " + operation);
-        System.out.println("Kafka Connect URL: " + KAFKA_CONNECT_URL);
-        System.out.println("Database: " + DATABASE);
+        System.out.println("Start Timestamp (Epoch Sec): " + START_TIMESTAMP);
         System.out.println("========================================\n");
 
         LocalDateTime startTime = LocalDateTime.now();
 
-        // Execute operation based on type
         switch (operation) {
             case LIST -> listAllConnectors();
             case CREATE -> createConnectors(collections);
@@ -104,283 +165,216 @@ public class KafkaConnectorGenerator {
             case RESTART_SINK -> restartConnectors(collections, ConnectorType.SINK);
         }
 
-        LocalDateTime endTime = LocalDateTime.now();
-
         if (operation != ConnectorOperation.LIST) {
-            printSummary(startTime, endTime, operation);
+            printSummary(startTime, LocalDateTime.now(), operation);
         }
     }
 
-    /**
-     * Prints usage information
-     */
-    private static void printUsage() {
-        System.out.println("\nUsage: java KafkaConnectorGenerator [OPERATION]\n");
-        System.out.println("Available Operations:");
-        System.out.println("  CREATE          - Create both source and sink connectors (default)");
-        System.out.println("  DELETE          - Delete both source and sink connectors");
-        System.out.println("  DELETE_SOURCE   - Delete only source connectors");
-        System.out.println("  DELETE_SINK     - Delete only sink connectors");
-        System.out.println("  RESTART         - Restart both source and sink connectors");
-        System.out.println("  RESTART_SOURCE  - Restart only source connectors");
-        System.out.println("  RESTART_SINK    - Restart only sink connectors");
-        System.out.println("  LIST            - List all connectors\n");
-        System.out.println("Example: java KafkaConnectorGenerator DELETE_SOURCE\n");
-    }
+    // ==========================================
+    // 4. CONNECTOR GENERATION METHODS
+    // ==========================================
 
-    /**
-     * Creates connectors for all collections
-     */
     private static void createConnectors(List<String> collections) {
-        System.out.println("Total Collections: " + totalCollections + "\n");
-
         for (int i = 0; i < collections.size(); i++) {
-            String collection = collections.get(i);
-            System.out.println(String.format("[%d/%d] Processing Collection: %s",
-                    i + 1, totalCollections, collection));
-
-            createSourceConnector(collection);
-            createSinkConnector(collection);
-
-            System.out.println("--------------------\n");
+            String col = collections.get(i);
+            System.out.println(String.format("[%d/%d] Processing: %s", i + 1, totalCollections, col));
+            createSourceConnector(col);
+            createSinkConnector(col);
+            System.out.println("--------------------");
         }
     }
 
-    /**
-     * Deletes connectors for all collections
-     */
-    private static void deleteConnectors(List<String> collections, ConnectorType type) {
-        System.out.println("Total Collections: " + totalCollections + "\n");
+    private static void createSourceConnector(String collectionName) {
+        String connectorName = "source_" + collectionName;
 
-        for (int i = 0; i < collections.size(); i++) {
-            String collection = collections.get(i);
-            System.out.println(String.format("[%d/%d] Processing Collection: %s",
-                    i + 1, totalCollections, collection));
-
-            if (type == ConnectorType.SOURCE || type == ConnectorType.BOTH) {
-                deleteConnector("source_" + collection);
-            }
-
-            if (type == ConnectorType.SINK || type == ConnectorType.BOTH) {
-                deleteConnector("sink_" + collection);
-            }
-
-            System.out.println("--------------------\n");
-        }
-    }
-
-    /**
-     * Restarts connectors for all collections
-     */
-    private static void restartConnectors(List<String> collections, ConnectorType type) {
-        System.out.println("Total Collections: " + totalCollections + "\n");
-
-        for (int i = 0; i < collections.size(); i++) {
-            String collection = collections.get(i);
-            System.out.println(String.format("[%d/%d] Processing Collection: %s",
-                    i + 1, totalCollections, collection));
-
-            if (type == ConnectorType.SOURCE || type == ConnectorType.BOTH) {
-                restartConnector("source_" + collection);
-            }
-
-            if (type == ConnectorType.SINK || type == ConnectorType.BOTH) {
-                restartConnector("sink_" + collection);
-            }
-
-            System.out.println("--------------------\n");
-        }
-    }
-
-    /**
-     * Lists all connectors
-     */
-    private static void listAllConnectors() {
-        try {
-            URL url = new URL(KAFKA_CONNECT_URL);
-            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-            conn.setRequestMethod("GET");
-            conn.setConnectTimeout(10000);
-            conn.setReadTimeout(10000);
-
-            int responseCode = conn.getResponseCode();
-            BufferedReader reader = new BufferedReader(
-                    new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8));
-
-            StringBuilder response = new StringBuilder();
-            String line;
-            while ((line = reader.readLine()) != null) {
-                response.append(line);
-            }
-            reader.close();
-
-            if (responseCode == 200) {
-                System.out.println("All Connectors:\n");
-                // Parse the JSON array response
-                String connectorsJson = response.toString();
-                // Remove brackets and quotes, split by comma
-                String connectors = connectorsJson.replace("[", "").replace("]", "")
-                        .replace("\"", "");
-
-                if (connectors.trim().isEmpty()) {
-                    System.out.println("  No connectors found");
-                } else {
-                    String[] connectorArray = connectors.split(",");
-                    for (int i = 0; i < connectorArray.length; i++) {
-                        System.out.println("  " + (i + 1) + ". " + connectorArray[i].trim());
+        // JSON Generation
+        String jsonPayload = """
+                {
+                    "name": "%s",
+                    "config": {
+                      "connector.class": "com.mongodb.kafka.connect.MongoSourceConnector",
+                      "tasks.max": "1",
+                      "connection.uri": "%s",
+                      "database": "%s",
+                      "collection": "%s",
+                      "topic.prefix": "%s",
+                      "startup.mode": "timestamp",
+                      "startup.mode.timestamp.start.at.operation.time": "%s",
+                      "output.format.value": "json",
+                      "output.format.key": "json",
+                      "key.converter": "org.apache.kafka.connect.json.JsonConverter",
+                      "value.converter": "org.apache.kafka.connect.json.JsonConverter",
+                      "key.converter.schemas.enable": "false",
+                      "value.converter.schemas.enable": "false",
+                      "publish.full.document.only": "false",
+                      "change.stream.full.document": "updateLookup",
+                      "errors.tolerance": "all",
+                      "errors.log.enable": "true",
+                      "producer.max.request.size": "5242880",
+                      "producer.override.security.protocol": "SASL_PLAINTEXT",
+                      "producer.override.sasl.mechanism": "PLAIN",
+                      "producer.override.sasl.jaas.config": "org.apache.kafka.common.security.plain.PlainLoginModule required username=\\\"%s\\\" password=\\\"%s\\\";"
                     }
-                    System.out.println("\nTotal: " + connectorArray.length + " connectors");
-                }
-            } else {
-                System.err.println("Failed to list connectors. HTTP Code: " + responseCode);
-            }
+                  }
+                """
+                .formatted(
+                        connectorName, SOURCE_URI, DATABASE, collectionName, TOPIC_PREFIX,
+                        START_TIMESTAMP,
+                        SOURCE_USER, SOURCE_PASS);
 
-        } catch (Exception e) {
-            System.err.println("Exception occurred while listing connectors: " + e.getMessage());
-            e.printStackTrace();
+        System.out.println("  → Creating Source: " + connectorName);
+        if (executeHttpPost(KAFKA_CONNECT_URL, jsonPayload, connectorName)) {
+            successfulSourceConnectors++;
+            System.out.println("  ✓ Source Created");
+        } else {
+            failedSourceConnectors++;
+            System.out.println("  ✗ Source Failed");
         }
     }
 
-    /**
-     * Deletes a specific connector
-     */
-    private static void deleteConnector(String connectorName) {
-        System.out.println("  → Deleting Connector: " + connectorName);
+    private static void createSinkConnector(String collectionName) {
+        String connectorName = "sink_" + collectionName;
+        String topicName = TOPIC_PREFIX + "." + DATABASE + "." + collectionName;
 
+        // Strategy Lookup
+        TopicConfig config = COLLECTION_RULES.getOrDefault(collectionName, COLLECTION_RULES.get("DEFAULT"));
+
+        // JSON Generation
+        String jsonPayload = """
+                {
+                    "name": "%s",
+                    "config": {
+                        "connector.class": "com.mongodb.kafka.connect.MongoSinkConnector",
+                        "tasks.max": "%d",
+                        "topics": "%s",
+                        "connection.uri": "%s",
+                        "database": "%s",
+                        "collection": "%s",
+                        "consumer.auto.offset.reset": "earliest",
+                        "key.converter": "org.apache.kafka.connect.json.JsonConverter",
+                        "value.converter": "org.apache.kafka.connect.json.JsonConverter",
+                        "key.converter.schemas.enable": "false",
+                        "value.converter.schemas.enable": "false",
+                        "key.projection.list": "_id",
+                        "document.id.strategy": "com.mongodb.kafka.connect.sink.processor.id.strategy.ProvidedInKeyStrategy",
+                        "document.id.strategy.overwrite.existing": "true",
+                        "change.data.capture.handler": "com.mongodb.kafka.connect.sink.cdc.mongodb.ChangeStreamHandler",
+                        "writemodel.strategy": "com.mongodb.kafka.connect.sink.writemodel.strategy.ReplaceOneDefaultStrategy",
+                        "max.num.retries": "3",
+                        "retries.defer.timeout": "5000",
+                        "errors.tolerance": "all",
+                        "errors.log.enable": "true",
+                        "errors.log.include.messages": "true",
+                        "errors.deadletterqueue.topic.name": "%s",
+                        "errors.deadletterqueue.context.headers.enable": "true",
+                        "errors.deadletterqueue.topic.replication.factor": "1",
+                        "consumer.override.security.protocol": "SASL_PLAINTEXT",
+                        "consumer.override.sasl.mechanism": "PLAIN",
+                        "consumer.override.sasl.jaas.config": "org.apache.kafka.common.security.plain.PlainLoginModule required username=\\\"%s\\\" password=\\\"%s\\\";",
+                        "consumer.override.max.partition.fetch.bytes": "5242880",
+                        "consumer.override.fetch.max.bytes": "52428800"
+                    }
+                }
+                """
+                .formatted(
+                        connectorName,
+                        config.sinkTasks, // Dynamic Task Count
+                        topicName, SINK_URI, DATABASE, collectionName,
+                        DLQ_TOPIC, SINK_USER, SINK_PASS);
+
+        System.out.println("  → Creating Sink: " + connectorName + " (Tasks: " + config.sinkTasks + ")");
+        if (executeHttpPost(KAFKA_CONNECT_URL, jsonPayload, connectorName)) {
+            successfulSinkConnectors++;
+            System.out.println("  ✓ Sink Created");
+        } else {
+            failedSinkConnectors++;
+            System.out.println("  ✗ Sink Failed");
+        }
+    }
+
+    // ==========================================
+    // 5. BULK OPERATION HELPERS
+    // ==========================================
+
+    private static void deleteConnectors(List<String> collections, ConnectorType type) {
+        for (String col : collections) {
+            if (type == ConnectorType.SOURCE || type == ConnectorType.BOTH) {
+                deleteConnector("source_" + col);
+            }
+            if (type == ConnectorType.SINK || type == ConnectorType.BOTH) {
+                deleteConnector("sink_" + col);
+            }
+        }
+    }
+
+    private static void restartConnectors(List<String> collections, ConnectorType type) {
+        for (String col : collections) {
+            if (type == ConnectorType.SOURCE || type == ConnectorType.BOTH) {
+                restartConnector("source_" + col);
+            }
+            if (type == ConnectorType.SINK || type == ConnectorType.BOTH) {
+                restartConnector("sink_" + col);
+            }
+        }
+    }
+
+    // ==========================================
+    // 6. LOW-LEVEL HTTP METHODS (Full Implementation)
+    // ==========================================
+
+    private static void deleteConnector(String connectorName) {
+        System.out.println("  → Deleting: " + connectorName);
         try {
             URL url = new URL(KAFKA_CONNECT_URL + "/" + connectorName);
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("DELETE");
-            conn.setConnectTimeout(10000);
-            conn.setReadTimeout(10000);
+            conn.setConnectTimeout(5000);
 
-            int responseCode = conn.getResponseCode();
+            int code = conn.getResponseCode();
 
-            if (responseCode == 204 || responseCode == 200) {
-                System.out.println("  ✓ Connector Deleted Successfully");
-                if (connectorName.startsWith("source_")) {
-                    successfulSourceConnectors++;
-                } else {
-                    successfulSinkConnectors++;
-                }
-            } else if (responseCode == 404) {
-                System.out.println("  ⚠ Connector not found: " + connectorName);
-                if (connectorName.startsWith("source_")) {
-                    failedSourceConnectors++;
-                } else {
-                    failedSinkConnectors++;
-                }
+            if (code == 204 || code == 200) {
+                System.out.println("    ✓ Deleted successfully");
+                updateStats(connectorName, true);
+            } else if (code == 404) {
+                System.out.println("    ⚠ Not found (Skipped)");
+                updateStats(connectorName, false);
             } else {
-                System.err.println("  ✗ Failed to delete connector. HTTP Code: " + responseCode);
-                if (connectorName.startsWith("source_")) {
-                    failedSourceConnectors++;
-                } else {
-                    failedSinkConnectors++;
-                }
+                System.err.println("    ✗ Failed (HTTP " + code + ")");
+                updateStats(connectorName, false);
             }
-
         } catch (Exception e) {
-            System.err.println("  ✗ Exception occurred: " + e.getMessage());
-            if (connectorName.startsWith("source_")) {
-                failedSourceConnectors++;
-            } else {
-                failedSinkConnectors++;
-            }
+            System.err.println("    ✗ Exception: " + e.getMessage());
+            updateStats(connectorName, false);
         }
     }
 
-    /**
-     * Restarts a specific connector
-     */
     private static void restartConnector(String connectorName) {
-        System.out.println("  → Restarting Connector: " + connectorName);
-
+        System.out.println("  → Restarting: " + connectorName);
         try {
             URL url = new URL(KAFKA_CONNECT_URL + "/" + connectorName + "/restart");
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("POST");
-            conn.setConnectTimeout(10000);
-            conn.setReadTimeout(10000);
+            conn.setDoOutput(true); // POST requires output stream even if empty
+            conn.setConnectTimeout(5000);
 
-            int responseCode = conn.getResponseCode();
+            int code = conn.getResponseCode();
 
-            if (responseCode == 204 || responseCode == 200) {
-                System.out.println("  ✓ Connector Restarted Successfully");
-                if (connectorName.startsWith("source_")) {
-                    successfulSourceConnectors++;
-                } else {
-                    successfulSinkConnectors++;
-                }
-            } else if (responseCode == 404) {
-                System.out.println("  ⚠ Connector not found: " + connectorName);
-                if (connectorName.startsWith("source_")) {
-                    failedSourceConnectors++;
-                } else {
-                    failedSinkConnectors++;
-                }
+            if (code == 204 || code == 200) {
+                System.out.println("    ✓ Restarted successfully");
+                updateStats(connectorName, true);
+            } else if (code == 404) {
+                System.out.println("    ⚠ Not found (Skipped)");
+                updateStats(connectorName, false);
             } else {
-                System.err.println("  ✗ Failed to restart connector. HTTP Code: " + responseCode);
-                if (connectorName.startsWith("source_")) {
-                    failedSourceConnectors++;
-                } else {
-                    failedSinkConnectors++;
-                }
+                System.err.println("    ✗ Failed (HTTP " + code + ")");
+                updateStats(connectorName, false);
             }
-
         } catch (Exception e) {
-            System.err.println("  ✗ Exception occurred: " + e.getMessage());
-            if (connectorName.startsWith("source_")) {
-                failedSourceConnectors++;
-            } else {
-                failedSinkConnectors++;
-            }
+            System.err.println("    ✗ Exception: " + e.getMessage());
+            updateStats(connectorName, false);
         }
     }
 
-    /**
-     * Creates and executes a source connector for the given collection
-     */
-    private static void createSourceConnector(String collectionName) {
-        String connectorName = "source_" + collectionName;
-        String jsonPayload = generateSourceConnectorJson(connectorName, collectionName);
-
-        System.out.println("  → Creating Source Connector: " + connectorName);
-
-        boolean success = executeHttpPost(KAFKA_CONNECT_URL, jsonPayload, connectorName);
-
-        if (success) {
-            successfulSourceConnectors++;
-            System.out.println("  ✓ Source Connector Created Successfully");
-        } else {
-            failedSourceConnectors++;
-            System.out.println("  ✗ Source Connector Creation Failed");
-        }
-    }
-
-    /**
-     * Creates and executes a sink connector for the given collection
-     */
-    private static void createSinkConnector(String collectionName) {
-        String connectorName = "sink_" + collectionName;
-        String topicName = TOPIC_PREFIX + "." + DATABASE + "." + collectionName;
-        String jsonPayload = generateSinkConnectorJson(connectorName, collectionName, topicName);
-
-        System.out.println("  → Creating Sink Connector: " + connectorName);
-
-        boolean success = executeHttpPost(KAFKA_CONNECT_URL, jsonPayload, connectorName);
-
-        if (success) {
-            successfulSinkConnectors++;
-            System.out.println("  ✓ Sink Connector Created Successfully");
-        } else {
-            failedSinkConnectors++;
-            System.out.println("  ✗ Sink Connector Creation Failed");
-        }
-    }
-
-    /**
-     * Executes HTTP POST request
-     */
     private static boolean executeHttpPost(String urlString, String jsonPayload, String connectorName) {
         try {
             URL url = new URL(urlString);
@@ -391,141 +385,102 @@ public class KafkaConnectorGenerator {
             conn.setConnectTimeout(10000);
             conn.setReadTimeout(10000);
 
-            // Write payload
             try (OutputStream os = conn.getOutputStream()) {
                 byte[] input = jsonPayload.getBytes(StandardCharsets.UTF_8);
                 os.write(input, 0, input.length);
             }
 
-            // Get response
             int responseCode = conn.getResponseCode();
+
+            // Read response body for debugging
             StringBuilder response = new StringBuilder();
-
-            BufferedReader reader;
-            if (responseCode >= 200 && responseCode < 300) {
-                reader = new BufferedReader(new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8));
-            } else {
-                reader = new BufferedReader(new InputStreamReader(conn.getErrorStream(), StandardCharsets.UTF_8));
+            try (BufferedReader br = new BufferedReader(new InputStreamReader(
+                    (responseCode >= 200 && responseCode < 300) ? conn.getInputStream() : conn.getErrorStream(),
+                    StandardCharsets.UTF_8))) {
+                String line;
+                while ((line = br.readLine()) != null) {
+                    response.append(line);
+                }
             }
-
-            String line;
-            while ((line = reader.readLine()) != null) {
-                response.append(line);
-            }
-            reader.close();
 
             if (responseCode == 201 || responseCode == 200) {
-                // System.out.println(" Response Code: " + responseCode);
-                // System.out.println(" Response: " + response.toString());
                 return true;
             } else if (responseCode == 409) {
-                System.out.println("    Connector already exists: " + connectorName);
-                // System.out.println(" Response: " + response.toString());
+                System.out.println("    ⚠ Connector already exists");
                 return false;
             } else {
-                System.err.println("    HTTP Error Code: " + responseCode);
-                System.err.println("    Error Response: " + response.toString());
+                System.err.println("    ✗ HTTP Error: " + responseCode);
+                System.err.println("    Error Details: " + response.toString());
                 return false;
             }
 
         } catch (Exception e) {
-            System.err.println("    Exception occurred: " + e.getMessage());
-            e.printStackTrace();
+            System.err.println("    ✗ Exception: " + e.getMessage());
             return false;
         }
     }
 
-    /**
-     * Generates JSON payload for source connector
-     */
-    private static String generateSourceConnectorJson(String connectorName, String collectionName) {
-        return """
-                {
-                    "name": "%s",
-                    "config": {
-                      "connector.class": "com.mongodb.kafka.connect.MongoSourceConnector",
-                      "tasks.max": "1",
-                      "connection.uri": "%s",
-                      "database": "%s",
-                      "collection": "%s",
-                      "topic.prefix": "%s",
-                      "startup.mode" : "copy_existing",
-                      "output.format.value": "json",
-                      "output.format.key": "json",
-                      "publish.full.document.only": "false",
-                      "change.stream.full.document": "updateLookup",
-                      "key.converter": "org.apache.kafka.connect.storage.StringConverter",
-                      "value.converter": "org.apache.kafka.connect.storage.StringConverter",
-                      "producer.max.request.size": "5242880",
-                      "producer.override.security.protocol": "SASL_PLAINTEXT",
-                      "producer.override.sasl.mechanism": "PLAIN",
-                      "producer.override.sasl.jaas.config": "org.apache.kafka.common.security.plain.PlainLoginModule required username=\\\"%s\\\" password=\\\"%s\\\";"
-                    }
-                  }
-                """
-                .formatted(
-                        connectorName,
-                        SOURCE_CONNECTION_URI,
-                        DATABASE,
-                        collectionName,
-                        TOPIC_PREFIX,
-                        SOURCE_SASL_USERNAME,
-                        SOURCE_SASL_PASSWORD);
-    }
+    private static void listAllConnectors() {
+        System.out.println("Fetching Connector List...");
+        try {
+            URL url = new URL(KAFKA_CONNECT_URL);
+            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+            conn.setRequestMethod("GET");
+            conn.setConnectTimeout(5000);
+            conn.setReadTimeout(5000);
 
-    /**
-     * Generates JSON payload for sink connector
-     */
-    private static String generateSinkConnectorJson(String connectorName, String collectionName, String topicName) {
-        return """
-            {
-                "name": "%s",
-                "config": {
-                    "connector.class": "com.mongodb.kafka.connect.MongoSinkConnector",
-                    "tasks.max": "1",
-                    "topics": "%s",
-                    "connection.uri": "%s",
-                    "database": "%s",
-                    "collection": "%s",
-                    "key.converter.schemas.enable": "false",
-                    "key.converter": "org.apache.kafka.connect.storage.StringConverter",
-                    "value.converter": "org.apache.kafka.connect.storage.StringConverter",
-                    "value.converter.schemas.enable": "false",
-                    "document.id.strategy": "com.mongodb.kafka.connect.sink.processor.id.strategy.ProvidedInKeyStrategy",
-                    "key.projection.list": "_id",
-                    "document.id.strategy.overwrite.existing": "true",
-                    "change.data.capture.handler": "com.mongodb.kafka.connect.sink.cdc.mongodb.ChangeStreamHandler",
-                    "writemodel.strategy": "com.mongodb.kafka.connect.sink.writemodel.strategy.ReplaceOneDefaultStrategy",
-                    "max.num.retries": "3",
-                    "retries.defer.timeout": "5000",
-                    "errors.tolerance": "all",
-                    "errors.log.enable": "true",
-                    "errors.log.include.messages": "true",
-                    "errors.deadletterqueue.topic.name": "%s",
-                    "errors.deadletterqueue.context.headers.enable": "true",
-                    "errors.deadletterqueue.topic.replication.factor": "1",
-                    "consumer.override.security.protocol": "SASL_PLAINTEXT",
-                    "consumer.override.sasl.mechanism": "PLAIN",
-                    "consumer.override.sasl.jaas.config": "org.apache.kafka.common.security.plain.PlainLoginModule required username=\\\"%s\\\" password=\\\"%s\\\";",
-                    "consumer.override.max.partition.fetch.bytes": "5242880",
-                    "consumer.override.fetch.max.bytes": "52428800"
+            int responseCode = conn.getResponseCode();
+
+            if (responseCode == 200) {
+                BufferedReader reader = new BufferedReader(
+                        new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8));
+                StringBuilder response = new StringBuilder();
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    response.append(line);
                 }
+                reader.close();
+
+                // Simple JSON array parsing (removing brackets/quotes)
+                String rawJson = response.toString();
+                String cleaned = rawJson.replace("[", "").replace("]", "").replace("\"", "");
+
+                if (cleaned.trim().isEmpty()) {
+                    System.out.println("No connectors found.");
+                } else {
+                    String[] connectors = cleaned.split(",");
+                    System.out.println("\nFound " + connectors.length + " Connectors:");
+                    for (String c : connectors) {
+                        System.out.println(" - " + c.trim());
+                    }
+                }
+            } else {
+                System.err.println("Failed to get list. HTTP " + responseCode);
             }
-            """
-                .formatted(
-                        connectorName,
-                        topicName,
-                        SINK_CONNECTION_URI,
-                        DATABASE,
-                        collectionName,
-                        DLQ_TOPIC,
-                        SINK_SASL_USERNAME,
-                        SINK_SASL_PASSWORD);
+
+        } catch (Exception e) {
+            System.err.println("Exception listing connectors: " + e.getMessage());
+        }
     }
 
-    /**
-     * Prints execution summary
-     */
+    // ==========================================
+    // 7. UTILITY & STATS
+    // ==========================================
+
+    private static void updateStats(String connectorName, boolean success) {
+        if (success) {
+            if (connectorName.startsWith("source_"))
+                successfulSourceConnectors++;
+            else
+                successfulSinkConnectors++;
+        } else {
+            if (connectorName.startsWith("source_"))
+                failedSourceConnectors++;
+            else
+                failedSinkConnectors++;
+        }
+    }
+
     private static void printSummary(LocalDateTime startTime, LocalDateTime endTime, ConnectorOperation operation) {
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
 
@@ -533,20 +488,20 @@ public class KafkaConnectorGenerator {
         System.out.println("Execution Summary");
         System.out.println("========================================");
         System.out.println("Operation: " + operation);
-        System.out.println("Start Time: " + startTime.format(formatter));
-        System.out.println("End Time: " + endTime.format(formatter));
         System.out.println("Duration: " + java.time.Duration.between(startTime, endTime).getSeconds() + " seconds");
         System.out.println("----------------------------------------");
-        System.out.println("Total Collections: " + totalCollections);
-        System.out.println("Source Connectors:");
-        System.out.println("  ✓ Successful: " + successfulSourceConnectors);
-        System.out.println("  ✗ Failed: " + failedSourceConnectors);
-        System.out.println("Sink Connectors:");
-        System.out.println("  ✓ Successful: " + successfulSinkConnectors);
-        System.out.println("  ✗ Failed: " + failedSinkConnectors);
-        System.out.println("----------------------------------------");
-        System.out.println("Total Successful: " + (successfulSourceConnectors + successfulSinkConnectors));
-        System.out.println("Total Failed: " + (failedSourceConnectors + failedSinkConnectors));
+        System.out.println("Source Connectors: " + successfulSourceConnectors + " Success / " + failedSourceConnectors
+                + " Failed");
+        System.out.println(
+                "Sink Connectors:   " + successfulSinkConnectors + " Success / " + failedSinkConnectors + " Failed");
         System.out.println("========================================");
+    }
+
+    private static void printUsage() {
+        System.out.println("Usage: java KafkaConnectorGenerator [OPERATION] [COLLECTIONS]");
+        System.out.println(
+                "Operations: CREATE, DELETE, RESTART, LIST, DELETE_SOURCE, DELETE_SINK, RESTART_SOURCE, RESTART_SINK");
+        System.out.println("Collections: Comma-separated list (optional, defaults to mw_config,playable_content)");
+        System.out.println("Example: java KafkaConnectorGenerator CREATE mw_config,playable_content,sport_info");
     }
 }
